Added guards and fixed tokens